# solid-mechanics

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: beam.rs  constitutive.rs  energy.rs  fem.rs  lib.rs  mohr.rs  plane.rs  tensor.rs  yield_criteria.rs
