[package]
name = "solid-mechanics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Solid mechanics in Rust — stress/strain tensors, beam theory, FEM basics, yield criteria, energy methods"
repository = "https://github.com/SuperInstance/solid-mechanics"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
